[FIX] mail,web: placement of the attachment action button distorted
Before this commit:
When the attachment size was too small, the download and delete buttons on the
image overlay were incorrectly positioned, leading to a less user-friendly experience.

Aftert this commit:
The delete and download button is not shown shown for the small images and you get
a delete option when the image is zommed in.

task-3563828

--- a/addons/mail/static/src/core/common/attachment_list.scss
+++ b/addons/mail/static/src/core/common/attachment_list.scss
@@ -24,6 +24,10 @@
     }
 }
 
+.o-mail-AttachmentImage-actions {
+    z-index: 1;
+}
+
 .o-mail-AttachmentImage {
     min-width: 20px;
     min-height: 20px;
